# advent-of-rustiness-2023

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs  part.rs
